# mixmatch

./: .gitignore  LICENSE  README.md  pyproject.toml
mixmatch/: __init__.py  audio_extractor.py  cli.py  features.py  key_detector.py  melody_analyzer.py  models.py  section_detector.py  source_separator.py  vocals_extractor.py
tests/samples/actual/: man_in_the_mirror.json  what_doesnt_kill_you_makes_you_stronger.json
tests/samples/expected/: livin_on_a_prayer.json  man_in_the_mirror.json  what_doesnt_kill_you_makes_you_stronger.json
